--- a/index 2.html
+++ b/index 2.html
@@ -6,6 +6,8 @@
     <title>Problem Will Never Last Forever</title>
 </head>
 <body>
-    
+    <h2>Kono Somossai Somossa na Jodi tumi bose na thako</h2>
+    <img width="400px" src="images/astronaut-alone-fog-exploration-moon-surface-spacecraft-5200x3250-8231.jpg" alt="">
+    <img width="400px" src="images/earth-ios-11-stock-black-background-ipad-2706x2706-771 (2).jpg" alt="">
 </body>
 </html>
